# cudaGameOfLife

./: CMakeLists.txt  CUDA_Projekt_Sem08.sln  README.md  sprawozdanie.md
CUDA_Projekt_Sem08/: CUDA_Projekt_Sem08.vcxproj  config.hpp  cudaUtils.cuh  gameOfLife.cpp  gameOfLife.hpp  gameOfLifeBlock.cu  gameOfLifeBlock.hpp  kernel.cu  main.cpp  sampleBoards.cpp  test.cpp
src/: bitset_view.cuh  common.cpp  common.hpp  config.hpp  cudaUtils.cu  cudaUtils.cuh  cudaUtils.hpp  gameOfLife.cpp  gameOfLifeBlock.cu  gameOfLifeBlock.hpp  main.cpp  sampleBoards.cpp  sampleBoards.hpp  test.cpp
